{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 92,
  "lineage": "07cb4507-be9c-f19f-0f4e-ee9bea496664",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "firewall_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [
              "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/azureFirewalls/firewall-hub"
            ],
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "swedencentral",
            "name": "firewall-policy",
            "private_ip_ranges": [],
            "resource_group_name": "rg-hub",
            "rule_collection_groups": [
              "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/policy-group",
              "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/policy-group-aks",
              "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/policy-group-dnat-aks"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "policy_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "allow-githubusercontent-any-source",
                "priority": 102,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "raw.githubusercontent.com"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "allow-githubusercontent-any-source",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      },
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/policy-group",
            "name": "policy-group",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "allow-inter-spokes-traffic",
                "priority": 101,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [
                      "10.0.0.0/8"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "*"
                    ],
                    "name": "allow-inter-spokes-traffic",
                    "protocols": [
                      "Any"
                    ],
                    "source_addresses": [
                      "10.0.0.0/8"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 100,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall_policy.firewall_policy",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "policy_group_aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "app-rules-private-aks",
                "priority": 202,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "login.microsoftonline.com"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "MicrosoftEntraAuthentication",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "mcr.microsoft.com",
                      "*.data.mcr.microsoft.com",
                      "mcr-0001.mcr-msedge.net"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "MicrosoftContainerRegistry",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "management.azure.com"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "AzureAPI",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "packages.microsoft.com"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "MicrosoftPackagesRepository",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "acs-mirror.azureedge.net"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "AKStoolsBinaries",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "security.ubuntu.com",
                      "azure.archive.ubuntu.com",
                      "changelogs.ubuntu.com"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "LinuxSecurityPatchAndUpdate",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "snapshot.ubuntu.com"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "LinuxSecurityPatchAndUpdateFromSnapshotService",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "data.policy.core.windows.net"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "AzurePolicy",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "store.policy.core.windows.net"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "GatekeeperArtifactsAndPolicies",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "dc.services.visualstudio.com"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "AzurePolicyAddonSendsTelemetryToAppInsights",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "vault.azure.net"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "AzureKeyVault",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.swedencentral.azmk8s.io"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "AKSControlPlane",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "packages.aks.azure.com"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "AKSPackages",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.docker.io",
                      "*.docker.com"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "DockerHubRegistry",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "ifconf.me"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "TestingOutboundConnectivity",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/policy-group-aks",
            "name": "policy-group-aks",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "network-rules-private-aks",
                "priority": 201,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [
                      "AzureMonitor"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "443"
                    ],
                    "name": "SendMtericsAndLogsToAzureMonitor",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "10.1.1.0/24"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 200,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall_policy.firewall_policy",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/publicIPAddresses/public-ip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.225.29.64",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "public-ip-bastion",
            "resource_group_name": "rg-hub",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/publicIPAddresses/public-ip-firewall",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.160.224.70",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "public-ip-firewall",
            "resource_group_name": "rg-hub",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            },
            "zones": [
              "1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub",
            "virtual_network_name": "vnet-hub"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub",
            "virtual_network_name": "vnet-hub"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.2.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/snet-vm",
            "name": "snet-vm",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub",
            "virtual_network_name": "vnet-hub"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].subscription_hub",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1e612e88-5a04-48b0-b77d-a2743693c1e3",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "location": "swedencentral",
            "name": "vnet-hub",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-hub",
            "subnet": [
              {
                "address_prefixes": [
                  "172.16.0.0/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "172.16.1.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "172.16.2.0/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/snet-vm",
                "name": "snet-vm",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}